--- a/PWC_Task_3.0/PWC_Task_3.0.csproj
+++ b/PWC_Task_3.0/PWC_Task_3.0.csproj
@@ -138,7 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\ChartSampleController.cs" />
+    <Compile Include="Controllers\ChartController.cs" />
     <Compile Include="Controllers\StartController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -161,8 +161,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\ChartSample\Index.cshtml" />
+    <Content Include="Views\Chart\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Start\Import.cshtml" />
     <Content Include="Views\Start\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
